--- a/index.html
+++ b/index.html
@@ -447,6 +447,7 @@ Lethal Company mod that syncs the cruiser between players.
 <p data-i18n="algorea">Reached Quarter-Finals of national contest Algoréa twice (Scratch)</p>
 <p data-i18n="ai">I use AI to assist with coding</p>
 <p data-i18n="german">I speak a bit of German</p>
+<p data-i18n="wiki">Worked on the wiki for the game Abyss</p>
 </div>
 </section>
 
@@ -516,6 +517,7 @@ const dict = {
   algorea:["Reached Quarter-Finals of national contest Algoréa twice (Scratch)","Quart de finale du Concours Algoréa national deux fois (Scratch)"],
   ai:["I use AI to assist with coding","J'utilise l'IA pour m'aider à coder"],
   german:["I speak a bit of German","Je parle un peu allemand"],
+  wiki:["Worked on the wiki for the game Abyss","J'ai travaillé sur le wiki du jeu Abyss"],
   discord:["Add on Discord","M'ajouter sur Discord"]
 };
 
