--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ My technical knowledge allows me to read and understand code, thus helping other
 <div class="project-card">
 <h3>Abyss</h3>
 <p data-i18n="abyss">
-Roblox game by Deep Spirit Games focused on catching fishes underwater with a harpoon.
+Roblox game by Deep Spirit Games focused on catching fishes underwater with a harpoon. Currently Veteran QA Tester.
 </p>
 <a class="project-link" href="https://discord.gg/deepspirit">View</a>
 </div>
@@ -507,7 +507,7 @@ const dict = {
   md:["Mod Development","Développement de mods"],
   mdDesc:["Gameplay mods, Behavior changes","Mods de gameplay, changement de comportement"],
   basic:["Basics","Bases"],
-  abyss:["Roblox game by Deep Spirit Games focused on catching fishes underwater with a harpoon.","Jeu Roblox de Deep Spirit Games axé sur la pêche sous-marine avec un harpon."],
+  abyss:["Roblox game by Deep Spirit Games focused on catching fishes underwater with a harpoon. Currently Veteran QA Tester.","Jeu Roblox de Deep Spirit Games axé sur la pêche sous-marine avec un harpon. En ce moment QA Testeur Vétéran."],
   solvo:["Roblox multiplayer survival game centered around evading a killer.","Jeu Roblox multijoueur de survie centré sur la fuite d’un tueur."],
   qac:["Multiple playtested games through QA Central, a hub for developers seeking testers.","Plusieurs jeux testés via QA Central, une plateforme pour développeurs recherchant des testeurs."],
   nrp:["Lethal Company performance mod removing rain particle effects.","Mod de performance pour Lethal Company supprimant les particules de pluie."],
