--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@ h2{text-align:center;font-size:2.8em;margin-bottom:60px;background:linear-gradie
 .project-card:hover{transform:translateY(-10px);box-shadow:0 20px 50px rgba(150,100,255,.3)}
 .project-card p{color:#aaa;margin-top:10px}
 .view-btn{margin-top:15px;padding:8px 22px;border-radius:20px;background:linear-gradient(135deg,#9a5cff,#5ddcff);color:#000;border:none;cursor:pointer;font-weight:600}
+.project-toggle{display:flex;justify-content:center;gap:20px;margin-bottom:40px}
+.project-toggle button{padding:10px 25px;border-radius:20px;border:none;cursor:pointer;font-weight:600;background:rgba(255,255,255,.08);color:#fff;transition:.3s}
+.project-toggle button.active{background:linear-gradient(135deg,#9a5cff,#5ddcff);color:#000}
 .other-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;text-align:center}
 .other-grid p{color:#aaa}
 .contact{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;text-align:center}
@@ -120,7 +123,7 @@ body.no-effects #bg-container{display:none}
 
 <section id="projects">
   <h2>Projects</h2>
-  <div class="project-tabs">
+  <div class="project-toggle">
     <button class="active" onclick="showProjects('testing', this)">Game Testing</button>
     <button onclick="showProjects('mods', this)">Mods</button>
   </div>
@@ -215,15 +218,15 @@ for(let i=0;i<70;i++){
   p.appendChild(s);
 }
 
-// Toggle tabs
+// Toggle between Game Testing and Mods
 function showProjects(type,btn){
   document.getElementById("testing").style.display=type==="testing"?"grid":"none";
   document.getElementById("mods").style.display=type==="mods"?"grid":"none";
-  document.querySelectorAll(".project-tabs button").forEach(b=>b.classList.remove("active"));
+  document.querySelectorAll(".project-toggle button").forEach(b=>b.classList.remove("active"));
   btn.classList.add("active");
 }
 
-// Effects toggle
+// Toggle Effects
 const toggleEffectsBtn = document.querySelector(".toggle-effects");
 let effectsEnabled = true;
 toggleEffectsBtn.addEventListener("click", ()=>{
