--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 body{font-family:Inter,system-ui,sans-serif;background:#05060a;color:#fff;overflow-x:hidden}
 html{scroll-behavior:smooth}
 
-/* ===== Navigation ===== */
+/* ---------------- NAV ---------------- */
 nav{position:fixed;top:0;width:100%;background:rgba(5,6,10,.65);backdrop-filter:blur(12px);z-index:100;border-bottom:1px solid rgba(255,255,255,.08)}
 nav .container{max-width:1400px;margin:auto;padding:20px 40px;display:flex;justify-content:space-between;align-items:center}
 .logo{font-weight:900;font-size:1.4em;background:linear-gradient(135deg,#00ffff,#9a5cff);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
@@ -21,76 +21,81 @@ nav .container{max-width:1400px;margin:auto;padding:20px 40px;display:flex;justi
 .nav-links a::after{content:"";position:absolute;bottom:-5px;left:0;width:0;height:2px;background:linear-gradient(90deg,#00ffff,#9a5cff);transition:.3s}
 .nav-links a:hover::after{width:100%}
 
-/* ===== Hero ===== */
+/* ---------------- HERO ---------------- */
 .hero{min-height:100vh;display:flex;align-items:center;justify-content:center;text-align:center;padding:0 20px}
 .hero h1{font-size:4.5em;font-weight:900;background:linear-gradient(135deg,#00ffff,#9a5cff,#3a7bff,#00ffff,#9a5cff);background-size:400% 400%;-webkit-background-clip:text;-webkit-text-fill-color:transparent;animation:textFlow 12s ease infinite}
 @keyframes textFlow{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
 .subtitle{font-size:1.6em;color:#ccc;margin:20px 0}
 .description{max-width:720px;margin:auto;color:#aaa;line-height:1.7}
 
-/* ===== Sections ===== */
+/* ---------------- SECTIONS ---------------- */
 section{padding:100px 20px;max-width:1400px;margin:auto}
 h2{text-align:center;font-size:2.8em;margin-bottom:60px;background:linear-gradient(135deg,#5ddcff,#9a5cff);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
 
-/* ===== Skills Grid ===== */
-.skills-grid,
-.other-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;justify-content:center;text-align:center}
+/* ---------------- SKILLS ---------------- */
+.skills-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;justify-content:center;text-align:center}
+.skills-grid > *:nth-child(5){justify-self:center}
 .skill-card{padding:30px;border-radius:20px;background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.12);transition:.4s}
 .skill-card:hover{transform:translateY(-8px);box-shadow:0 20px 40px rgba(90,160,255,.25)}
 
-/* ===== Projects ===== */
+/* ---------------- OTHER ---------------- */
+.other-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;text-align:center;justify-content:center}
+.other-grid > *:nth-child(5){justify-self:center}
+.other-grid p{color:#aaa;transition:.4s}
+.other-grid p:hover{transform:translateY(-8px);box-shadow:0 20px 40px rgba(90,160,255,.25)}
+
+/* ---------------- PROJECTS ---------------- */
+.project-tabs{display:flex;justify-content:center;gap:20px;margin-bottom:40px}
+.project-tabs button{padding:10px 26px;border-radius:30px;border:1px solid #5ddcff;background:none;color:#fff;cursor:pointer;transition:.3s}
+.project-tabs button.active{background:linear-gradient(135deg,#5ddcff,#9a5cff);color:#000}
+
 .projects-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(320px,1fr));gap:30px}
 .project-card{padding:30px;border-radius:20px;background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.15);transition:.4s;position:relative}
 .project-card:hover{transform:translateY(-10px);box-shadow:0 20px 50px rgba(150,100,255,.3)}
 .project-card p{color:#aaa;margin-top:10px}
 .view-btn{margin-top:15px;padding:8px 22px;border-radius:20px;background:linear-gradient(135deg,#9a5cff,#5ddcff);color:#000;border:none;cursor:pointer;font-weight:600}
 
-/* ===== Contact & Other ===== */
-.other-grid p{color:#aaa}
+/* ---------------- CONTACT ---------------- */
 .contact{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;text-align:center}
 .contact p{color:#aaa}
 .contact a{color:#5ddcff;text-decoration:none}
 
-/* ===== Toggles ===== */
+/* ---------------- BUTTONS ---------------- */
 .lang-toggle, .toggle-effects{position:fixed;bottom:20px;right:20px;z-index:200;background:rgba(10,10,20,.7);border:1px solid #5ddcff;color:#fff;padding:8px 14px;border-radius:20px;cursor:pointer;backdrop-filter:blur(6px)}
 .toggle-effects{right:150px}
 
-/* ===== Modal ===== */
+/* ---------------- MODAL ---------------- */
 .modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,.85);justify-content:center;align-items:center;z-index:300;padding:20px}
 .modal-content{background:#111;border-radius:20px;padding:30px;max-width:500px;width:100%;position:relative;text-align:center}
 .modal-content img{max-width:150px;margin-bottom:20px;border-radius:12px}
 .modal-content .close{position:absolute;top:15px;right:15px;cursor:pointer;font-size:20px;color:#fff}
+#modalStatus{color:#0f0;font-weight:700}
 
-/* ===== Status Text ===== */
-.status-active{color:#0f0;font-weight:600}
-.status-inactive{color:#f33;font-weight:600}
-
-/* ===== Media ===== */
-@media(max-width:768px){.hero h1{font-size:3em}.nav-links{display:none}}
-
-/* ===== Background ===== */
-.bg{position:fixed;inset:0;z-index:-3;background:radial-gradient(circle at top,#0c1224,#05060a 60%);overflow:hidden;isolation:isolate}
-.aurora{position:absolute;width:220%;height:220%;top:-60%;left:-60%;background:linear-gradient(120deg,rgba(0,255,255,.08),rgba(140,0,255,.08),rgba(0,150,255,.08),rgba(0,255,180,.05));filter:blur(140px);animation:auroraMove 32s linear infinite,auroraColor 15s ease-in-out infinite alternate;transform-origin:center;opacity:.85}
+/* ---------------- BACKGROUND ---------------- */
+.bg{position:fixed;inset:0;z-index:-3;background:radial-gradient(circle at top,#0c1224,#05060a 60%);overflow:hidden;isolation:isolate;transition:.5s}
+.aurora{position:absolute;width:220%;height:220%;top:-60%;left:-60%;background:linear-gradient(120deg,rgba(0,255,255,.08),rgba(140,0,255,.08),rgba(0,150,255,.08),rgba(0,255,180,.05));filter:blur(140px);animation:auroraMove 32s linear infinite,auroraColor 15s ease-in-out infinite alternate;transform-origin:center;opacity:.85;transition:.5s}
 .aurora.second{animation:auroraMoveReverse 46s linear infinite,auroraColor 18s ease-in-out infinite alternate;opacity:.55;transform:scale(1.15)}
 @keyframes auroraMove{0%{transform:rotate(0deg) translateY(0)}50%{transform:rotate(180deg) translateY(-6%)}100%{transform:rotate(360deg) translateY(0)}}
 @keyframes auroraMoveReverse{0%{transform:rotate(360deg) translateY(0)}50%{transform:rotate(180deg) translateY(8%)}100%{transform:rotate(0deg) translateY(0)}}
 @keyframes auroraColor{0%{filter:blur(120px) brightness(0.9) saturate(0.8)}50%{filter:blur(150px) brightness(1.2) saturate(1.3)}100%{filter:blur(130px) brightness(1) saturate(1)}}
-.glow{position:absolute;width:500px;height:500px;border-radius:50%;filter:blur(160px);opacity:.35;animation:glowDrift 18s ease-in-out infinite alternate}
+.glow{position:absolute;width:500px;height:500px;border-radius:50%;filter:blur(160px);opacity:.35;animation:glowDrift 18s ease-in-out infinite alternate;transition:.5s}
 .glow.cyan{background:#00ffff;top:10%;left:10%}
 .glow.purple{background:#9a5cff;bottom:10%;right:15%}
 .glow.blue{background:#3a7bff;top:55%;left:55%}
 @keyframes glowDrift{0%{transform:translate(0,0)}50%{transform:translate(80px,-120px)}100%{transform:translate(-40px,60px)}}
-body::after{content:"";position:fixed;inset:0;background-image:url(\"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120' height='120'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.9' numOctaves='4'/%3E%3C/filter%3E%3Crect width='120' height='120' filter='url(%23n)' opacity='.03'/%3E%3C/svg%3E\");pointer-events:none;z-index:-1}
+.particles span{position:absolute;border-radius:50%;background:rgba(255,255,255,.85);opacity:.4;animation:particleDrift linear infinite;will-change:transform}
+.particles span.small{width:1px;height:1px;opacity:.25}
+.particles span.medium{width:2px;height:2px;opacity:.45}
+.particles span.large{width:3px;height:3px;opacity:.6;filter:blur(.3px)}
+@keyframes particleDrift{from{transform:translateY(120vh) translateX(0)}to{transform:translateY(-20vh) translateX(140px)}}
 
-/* ===== Project Tabs ===== */
-.project-tabs{display:flex;justify-content:center;gap:20px;margin-bottom:40px}
-.project-tabs button{padding:10px 26px;border-radius:30px;border:1px solid #5ddcff;background:none;color:#fff;cursor:pointer;transition:.3s}
-.project-tabs button.active{background:linear-gradient(135deg,#5ddcff,#9a5cff);color:#000}
+/* ---------------- FOOTER ---------------- */
+footer{text-align:center;padding:20px;color:#777;font-size:0.9em}
+@media(max-width:768px){.hero h1{font-size:3em}.nav-links{display:none}}
 </style>
 </head>
 <body>
 
-<!-- Background -->
 <div class="bg">
   <div class="aurora"></div>
   <div class="aurora second"></div>
@@ -134,8 +139,14 @@ body::after{content:"";position:fixed;inset:0;background-image:url(\"data:image/
 <section id="skills">
   <h2>Skills</h2>
   <div class="skills-grid">
-    <div class="skill-card"><h3>Game Testing</h3><p>Playtesting, QA reports, balance feedback</p></div>
-    <div class="skill-card"><h3>Mod Development</h3><p>Gameplay mods, scripting improvements</p></div>
+    <div class="skill-card">
+      <h3>Game Testing</h3>
+      <p>Playtesting, QA reports, balance feedback</p>
+    </div>
+    <div class="skill-card">
+      <h3>Mod Development</h3>
+      <p>Gameplay mods, scripting improvements</p>
+    </div>
     <div class="skill-card"><h3>Python</h3><p>Basics</p></div>
     <div class="skill-card"><h3>AutoHotkey</h3><p>Basics</p></div>
     <div class="skill-card"><h3>3D Modelling</h3><p>Basics</p></div>
@@ -149,26 +160,29 @@ body::after{content:"";position:fixed;inset:0;background-image:url(\"data:image/
     <button onclick="showProjects('mods', this)">Mods</button>
   </div>
 
-  <!-- Testing Grid -->
   <div class="projects-grid" id="testing">
-    <div class="project-card" data-info='{"position":"Veteran QA for Abyss","status":"Active","link":"https://discord.gg/deepspirit","image":"abyss.png"}'>
+    <div class="project-card" 
+         data-info='{"position":"Veteran QA for Abyss","status":"Active","link":"https://discord.gg/deepspirit","image":"abyss.png"}'>
       <h3>Abyss</h3>
       <p>Roblox game by Deep Spirit Games focused on catching fishes underwater with a harpoon.</p>
       <button class="view-btn">View</button>
     </div>
-    <div class="project-card" data-info='{"position":"QA for Solvo","status":"Active","link":"https://discord.gg/ryfqDSYGMX","image":"solvo.png"}'>
+
+    <div class="project-card" 
+         data-info='{"position":"QA for Solvo","status":"Active","link":"https://discord.gg/ryfqDSYGMX","image":"solvo.png"}'>
       <h3>Solvo</h3>
       <p>Roblox multiplayer survival game centered around evading a killer.</p>
       <button class="view-btn">View</button>
     </div>
-    <div class="project-card" data-info='{"position":"QA for Multiple Games via QA Central","status":"Active","link":"https://discord.gg/qac","image":"qac.png"}'>
+
+    <div class="project-card" 
+         data-info='{"position":"QA for Multiple Games via QA Central","status":"Active","link":"https://discord.gg/qac","image":"qac.png"}'>
       <h3>QA Central</h3>
       <p>Multiple playtested games through QA Central, a hub for developers seeking testers.</p>
       <button class="view-btn">View</button>
     </div>
   </div>
 
-  <!-- Mods Grid -->
   <div class="projects-grid" id="mods" style="display:none">
     <div class="project-card">
       <h3>NoRainParticles</h3>
@@ -209,14 +223,9 @@ body::after{content:"";position:fixed;inset:0;background-image:url(\"data:image/
   </div>
 </section>
 
-<!-- Footer -->
-<footer style="text-align:center;color:#555;padding:30px 0;font-size:0.9em;">
-  Mystic-HQ 2026
-</footer>
+<footer>Mystic-HQ 2026</footer>
 
-<!-- Toggle Buttons -->
 <button class="toggle-effects">Disable Effects</button>
-<button class="lang-toggle">FR</button>
 
 <!-- Modal -->
 <div class="modal" id="projectModal">
@@ -231,17 +240,18 @@ body::after{content:"";position:fixed;inset:0;background-image:url(\"data:image/
 </div>
 
 <script>
-/* ===== Background Particles (disabled toggle) ===== */
-const toggleEffectsBtn = document.querySelector(".toggle-effects");
-const bgElements = document.querySelectorAll(".aurora, .glow, .particles");
+/* ---------------- Background / Effects ---------------- */
+const bg = document.querySelector(".bg");
+const auroras = document.querySelectorAll(".aurora, .glow, .particles");
 let effectsEnabled = true;
-toggleEffectsBtn.addEventListener("click", ()=>{
+
+document.querySelector(".toggle-effects").addEventListener("click", ()=>{
   effectsEnabled = !effectsEnabled;
-  toggleEffectsBtn.textContent = effectsEnabled ? "Disable Effects" : "Enable Effects";
-  bgElements.forEach(el=>el.style.display = effectsEnabled ? "block" : "none");
+  document.querySelector(".toggle-effects").textContent = effectsEnabled ? "Disable Effects" : "Enable Effects";
+  auroras.forEach(e=>e.style.display = effectsEnabled ? "block" : "none");
 });
 
-/* ===== Project Tabs ===== */
+/* ---------------- Tabs ---------------- */
 function showProjects(type, btn){
   document.getElementById("testing").style.display = type==="testing"?"grid":"none";
   document.getElementById("mods").style.display = type==="mods"?"grid":"none";
@@ -249,7 +259,7 @@ function showProjects(type, btn){
   btn.classList.add("active");
 }
 
-/* ===== Modal for Testing Projects ===== */
+/* ---------------- Modal ---------------- */
 const modal = document.getElementById("projectModal");
 const modalImage = document.getElementById("modalImage");
 const modalTitle = document.getElementById("modalTitle");
@@ -265,7 +275,6 @@ document.querySelectorAll("#testing .view-btn").forEach(btn=>{
     modalTitle.textContent = card.querySelector("h3").textContent;
     modalPosition.textContent = info.position;
     modalStatus.textContent = info.status;
-    modalStatus.className = info.status.toLowerCase() === "active" ? "status-active" : "status-inactive";
     modalLink.href = info.link;
     modalImage.src = info.image;
   });
@@ -274,7 +283,7 @@ document.querySelectorAll("#testing .view-btn").forEach(btn=>{
 document.querySelector(".modal .close").addEventListener("click", ()=>modal.style.display="none");
 window.addEventListener("click", e=>{if(e.target===modal) modal.style.display="none"});
 
-/* ===== Smooth Scrolling ===== */
+/* ---------------- Smooth Scrolling ---------------- */
 document.querySelectorAll('a[href^="#"]').forEach(link=>{
   link.addEventListener('click', e=>{
     e.preventDefault();
@@ -282,6 +291,18 @@ document.querySelectorAll('a[href^="#"]').forEach(link=>{
     if(target){target.scrollIntoView({behavior:'smooth',block:'start'})}
   });
 });
+
+/* ---------------- Particles ---------------- */
+const particlesContainer = document.getElementById("particles");
+for(let i=0;i<60;i++){
+  const p = document.createElement("span");
+  const size = ["small","medium","large"][Math.floor(Math.random()*3)];
+  p.className = size;
+  p.style.top=Math.random()*100+"%";
+  p.style.left=Math.random()*100+"%";
+  p.style.animationDuration=(10+Math.random()*20)+"s";
+  particlesContainer.appendChild(p);
+}
 </script>
 
 </body>
