--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@ h2{text-align:center;font-size:2.8em;margin-bottom:60px;background:linear-gradie
 
 /* ---------------- SKILLS ---------------- */
 .skills-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;justify-content:center;text-align:center}
-.skills-grid > *:nth-child(5){justify-self:center}
 .skill-card{padding:30px;border-radius:20px;background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.12);transition:.4s}
 .skill-card:hover{transform:translateY(-8px);box-shadow:0 20px 40px rgba(90,160,255,.25)}
+.skills-grid .skill-card:nth-child(5){grid-column:1/-1;justify-self:center}
 
 /* ---------------- OTHER ---------------- */
 .other-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;text-align:center;justify-content:center}
-.other-grid > *:nth-child(5){justify-self:center}
 .other-grid p{color:#aaa;transition:.4s}
 .other-grid p:hover{transform:translateY(-8px);box-shadow:0 20px 40px rgba(90,160,255,.25)}
+.other-grid p:nth-child(5){grid-column:1/-1;justify-self:center}
 
 /* ---------------- PROJECTS ---------------- */
 .project-tabs{display:flex;justify-content:center;gap:20px;margin-bottom:40px}
@@ -69,7 +69,10 @@ h2{text-align:center;font-size:2.8em;margin-bottom:60px;background:linear-gradie
 .modal-content{background:#111;border-radius:20px;padding:30px;max-width:500px;width:100%;position:relative;text-align:center}
 .modal-content img{max-width:150px;margin-bottom:20px;border-radius:12px}
 .modal-content .close{position:absolute;top:15px;right:15px;cursor:pointer;font-size:20px;color:#fff}
-#modalStatus{color:#0f0;font-weight:700}
+
+/* Status text colors */
+.status-active { color: #0f0; font-weight:600; }
+.status-inactive { color: #f33; font-weight:600; }
 
 /* ---------------- BACKGROUND ---------------- */
 .bg{position:fixed;inset:0;z-index:-3;background:radial-gradient(circle at top,#0c1224,#05060a 60%);overflow:hidden;isolation:isolate;transition:.5s}
@@ -91,6 +94,7 @@ h2{text-align:center;font-size:2.8em;margin-bottom:60px;background:linear-gradie
 
 /* ---------------- FOOTER ---------------- */
 footer{text-align:center;padding:20px;color:#777;font-size:0.9em}
+
 @media(max-width:768px){.hero h1{font-size:3em}.nav-links{display:none}}
 </style>
 </head>
@@ -234,21 +238,29 @@ footer{text-align:center;padding:20px;color:#777;font-size:0.9em}
     <img id="modalImage" src="" alt="Project Image">
     <h3 id="modalTitle"></h3>
     <p><strong>Position:</strong> <span id="modalPosition"></span></p>
-    <p><strong>Status:</strong> <span id="modalStatus"></span></p>
+    <p><strong>Status:</strong> <span id="modalStatus" class="status-active"></span></p>
     <a id="modalLink" href="#" target="_blank">Visit</a>
   </div>
 </div>
 
 <script>
-/* ---------------- Background / Effects ---------------- */
-const bg = document.querySelector(".bg");
-const auroras = document.querySelectorAll(".aurora, .glow, .particles");
-let effectsEnabled = true;
+/* ---------------- Particles ---------------- */
+const particlesContainer = document.getElementById("particles");
+for(let i=0;i<60;i++){
+  const p = document.createElement("span");
+  const size = ["small","medium","large"][Math.floor(Math.random()*3)];
+  p.className = size;
+  p.style.top=Math.random()*100+"%";
+  p.style.left=Math.random()*100+"%";
+  p.style.animationDuration=(10+Math.random()*20)+"s";
+  particlesContainer.appendChild(p);
+}
 
+/* ---------------- Effects toggle ---------------- */
+const auroras = document.querySelectorAll(".aurora, .glow, .particles");
 document.querySelector(".toggle-effects").addEventListener("click", ()=>{
-  effectsEnabled = !effectsEnabled;
-  document.querySelector(".toggle-effects").textContent = effectsEnabled ? "Disable Effects" : "Enable Effects";
-  auroras.forEach(e=>e.style.display = effectsEnabled ? "block" : "none");
+  auroras.forEach(e=>e.style.display = e.style.display==="none"?"block":"none");
+  document.querySelector(".toggle-effects").textContent = document.querySelector(".toggle-effects").textContent==="Disable Effects"?"Enable Effects":"Disable Effects";
 });
 
 /* ---------------- Tabs ---------------- */
@@ -275,6 +287,7 @@ document.querySelectorAll("#testing .view-btn").forEach(btn=>{
     modalTitle.textContent = card.querySelector("h3").textContent;
     modalPosition.textContent = info.position;
     modalStatus.textContent = info.status;
+    modalStatus.className = info.status.toLowerCase() === "active" ? "status-active" : "status-inactive";
     modalLink.href = info.link;
     modalImage.src = info.image;
   });
@@ -283,26 +296,14 @@ document.querySelectorAll("#testing .view-btn").forEach(btn=>{
 document.querySelector(".modal .close").addEventListener("click", ()=>modal.style.display="none");
 window.addEventListener("click", e=>{if(e.target===modal) modal.style.display="none"});
 
-/* ---------------- Smooth Scrolling ---------------- */
+/* ---------------- Smooth scrolling ---------------- */
 document.querySelectorAll('a[href^="#"]').forEach(link=>{
   link.addEventListener('click', e=>{
     e.preventDefault();
     const target = document.querySelector(link.getAttribute('href'));
-    if(target){target.scrollIntoView({behavior:'smooth',block:'start'})}
+    if(target) target.scrollIntoView({behavior:'smooth', block:'start'});
   });
 });
-
-/* ---------------- Particles ---------------- */
-const particlesContainer = document.getElementById("particles");
-for(let i=0;i<60;i++){
-  const p = document.createElement("span");
-  const size = ["small","medium","large"][Math.floor(Math.random()*3)];
-  p.className = size;
-  p.style.top=Math.random()*100+"%";
-  p.style.left=Math.random()*100+"%";
-  p.style.animationDuration=(10+Math.random()*20)+"s";
-  particlesContainer.appendChild(p);
-}
 </script>
 
 </body>
